src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>MSISDN__c</fullName>
        <description>MSISDN Line number</description>
        <inlineHelpText>MSISDN Line number</inlineHelpText>
        <label>MSISDN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Id__c</fullName>
        <label>Subscription Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Producto__c</fullName>
        <formula>TEXT( Product2.vlocity_cmt__Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de Producto</label>
        <type>Text</type>
    </fields>
</CustomObject>